...
                                android:layout_height="wrap_content"
                                android:text="@string/name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/profile_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textSize="16sp" />

...
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/profile_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textSize="16sp" />

...
                                android:layout_height="wrap_content"
                                android:text="@string/phone_number"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/profile_phone_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textSize="16sp" />

...
        app:icon="@drawable/baseline_edit_notifications_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_profile_button" />

    <Button
        android:id="@+id/delete_profile_button"
        android:layout_width="172dp"
        android:layout_height="53dp"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:text="Delete\nProfile"
        app:icon="@drawable/baseline_remove_moderator_24"
...
