<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_create_facility"
        android:name="com.example.employ_events.ui.fragment.facility.CreateFacilityFragment"
        tools:layout="@layout/create_facility">
    </fragment>

    <fragment
        android:id="@+id/nav_image"
        android:name="com.example.employ_events.ui.fragment.admin.AdminImageListFragment"
        android:label="Admin: Browse Images"
        tools:layout="@layout/fragment_image_list">
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.employ_events.ui.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_entrantNotifications"
            app:destination="@+id/entrantNotifications" />
        <action
            android:id="@+id/action_homeFragment_to_adminEventListFragment"
            app:destination="@+id/nav_browse_event" />
        <action
            android:id="@+id/action_homeFragment_to_adminBrowseProfilesFragment"
            app:destination="@+id/nav_browse_profiles" />
        <action
            android:id="@+id/action_nav_home_to_nav_invitations"
            app:destination="@id/nav_invitations" />
        <action
            android:id="@+id/action_nav_home_to_scan_qr_code"
            app:destination="@id/scan_qr_code" />
        <action
            android:id="@+id/action_nav_home_to_nav_facility"
            app:destination="@id/nav_facility" />
    </fragment>

    <fragment
        android:id="@+id/nav_facility"
        android:name="com.example.employ_events.ui.fragment.facility.FacilityFragment"
        android:label="@string/menu_facility"
        tools:layout="@layout/fragment_facility">
        <action
            android:id="@+id/action_facilityFragment_to_eventListFragment"
            app:destination="@id/eventListFragment" />
        <action
            android:id="@+id/action_nav_facility_to_nav_create_facility"
            app:destination="@id/nav_create_facility" />
        <action
            android:id="@+id/action_nav_facility_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_facility_to_nav_edit_facility"
            app:destination="@id/nav_edit_facility" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.employ_events.ui.fragment.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_edit_profile"
            app:destination="@id/nav_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.example.employ_events.ui.fragment.profile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_nav_edit_profile_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_facility"
        android:name="com.example.employ_events.ui.fragment.facility.EditFacilityFragment"
        android:label="Edit Facility"
        tools:layout="@layout/fragment_edit_facility" >
        <action
            android:id="@+id/action_nav_edit_facility_to_nav_facility"
            app:destination="@id/nav_facility">
        </action>
    </fragment>

    <fragment
        android:id="@+id/addEventFragment"
        android:name="com.example.employ_events.ui.fragment.event.AddEventFragment"
        android:label="Add Event"
        tools:layout="@layout/add_event">
        <action
            android:id="@+id/action_addEventFragment_to_eventListFragment"
            app:destination="@id/eventListFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_registered_events"
        android:name="com.example.employ_events.ui.fragment.event.RegisteredEventsFragment"
        android:label="Registered Events"
        tools:layout="@layout/fragment_registered_events" >
        <action
            android:id="@+id/action_nav_registered_events_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/eventListFragment"
        android:name="com.example.employ_events.ui.fragment.event.EventListFragment"
        android:label="Events"
        tools:layout="@layout/fragment_event_list">

        <!-- Action to navigate to AddEventFragment -->
        <action
            android:id="@+id/action_eventListFragment_to_addEventFragment"
            app:destination="@id/addEventFragment" />

        <!-- New action to navigate to EventDetailsFragment -->
        <action
            android:id="@+id/action_eventListFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment">
            <argument
                android:name="EVENT_ID"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_eventListFragment_to_manageEventFragment"
            app:destination="@id/manageEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="com.example.employ_events.ui.fragment.event.EventDetailsFragment"
        android:label="Event Details"
        tools:layout="@layout/event_details">

        <!-- Add a back action if needed
         Jasleen's code -->
        <action
            android:id="@+id/action_eventDetailsFragment_to_eventListFragment"
            app:destination="@id/eventListFragment" />
        <action
            android:id="@+id/action_eventDetailsFragment_to_nav_edit_profile"
            app:destination="@id/nav_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/manageEventFragment"
        android:name="com.example.employ_events.ui.fragment.event.ManageEventFragment"
        android:label="Manage Event"
        tools:layout="@layout/fragment_manage_event">
        <action
            android:id="@+id/action_manageEventFragment_to_editEventFragment"
            app:destination="@id/editEventFragment" />
        <action
            android:id="@+id/action_manageEventFragment_to_manageEventEntrantsFragment"
            app:destination="@id/manageEventEntrantsFragment" />
        <action
            android:id="@+id/action_manageEventFragment_to_download_qr_code"
            app:destination="@id/download_qr_code" />
    </fragment>

    <fragment
        android:id="@+id/editEventFragment"
        android:name="com.example.employ_events.ui.fragment.event.EditEventFragment"
        android:label="Edit Event"
        tools:layout="@layout/edit_event">
        <action
            android:id="@+id/action_editEventFragment_to_manageEventFragment"
            app:destination="@id/manageEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/manageEventEntrantsFragment"
        android:name="com.example.employ_events.ui.fragment.event.ManageEventEntrantsFragment"
        android:label="Manage Entrants"
        tools:layout="@layout/fragment_manage_event_entrants">
        <action
            android:id="@+id/action_manageEventEntrantsFragment_to_sendNotificationsScreen"
            app:destination="@+id/sendNotificationScreen" />
        <action
            android:id="@+id/action_manageEventEntrantsFragment_to_event_entrants_map"
            app:destination="@id/event_entrants_map" />
    </fragment>

    <fragment
        android:id="@+id/sendNotificationScreen"
        android:name="com.example.employ_events.ui.fragment.notification.SendNotificationFragment"
        android:label="Send Notifications"
        tools:layout="@layout/fragment_send_notification_screen">

    </fragment>

    <fragment
        android:id="@+id/download_qr_code"
        android:name="com.example.employ_events.ui.fragment.qrcode.DownloadQRCodeFragment"
        android:label="Download QR Code"
        tools:layout="@layout/download_qr_code">
    </fragment>

    <fragment
        android:id="@+id/scan_qr_code"
        android:name="com.example.employ_events.ui.fragment.qrcode.ScanQrCodeFragment"
        android:label="Scan QR Code">
        <action
            android:id="@+id/action_scan_qr_code_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/event_entrants_map"
        android:name="com.example.employ_events.ui.fragment.event.EventEntrantsMapFragment"
        android:label="Entrants Map">
    </fragment>

    <fragment
        android:id="@+id/nav_browse_event"
        android:name="com.example.employ_events.ui.fragment.admin.AdminEventListFragment"
        android:label="Admin: Browse Events"
        tools:layout="@layout/fragment_admin_event_list">
        <action
            android:id="@+id/action_adminEventListFragment_to_manageEventFragment"
            app:destination="@+id/manageEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.employ_events.ui.fragment.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_browse_profiles"
        android:name="com.example.employ_events.ui.fragment.admin.AdminBrowseProfilesFragment"
        android:label="Admin: Browse Profiles"
        tools:layout="@layout/fragment_admin_profile_list">
        <action
            android:id="@+id/action_adminBrowseProfilesFragment_to_profileFragment"
            app:destination="@+id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/facilityFragment"
        android:name="com.example.employ_events.ui.fragment.facility.FacilityFragment"
        android:label="@string/menu_facility"
        tools:layout="@layout/fragment_facility" />

    <fragment
        android:id="@+id/adminBrowseFacilitiesFragment"
        android:name="com.example.employ_events.ui.fragment.admin.AdminBrowseFacilitiesFragment"
        android:label="Admin: Browse Facilities"
        tools:layout="@layout/fragment_admin_facility_list">
        <action
            android:id="@+id/action_adminBrowseFacilitiesFragment_to_facilityFragment"
            app:destination="@+id/facilityFragment" />
    </fragment>

    <fragment
        android:id="@+id/invitation_fragment"
        android:name="com.example.employ_events.ui.fragment.invitation.InvitationFragment"
        tools:layout="@layout/event_invitation"
        android:label="Invitation">
        <action
            android:id="@+id/action_invitation_fragment_to_nav_invitations"
            app:destination="@id/nav_invitations" />
        <action
            android:id="@+id/action_invitation_fragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_invitations"
        android:name="com.example.employ_events.ui.fragment.invitation.InvitationsListFragment"
        tools:layout="@layout/fragment_invitations_list"
        android:label="Invitations">

        <action
            android:id="@+id/action_nav_invitations_to_invitation_fragment"
            app:destination="@id/invitation_fragment" />
    </fragment>


</navigation>