<resources>
    <string name="app_name">Employ-Events</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Employ Events</string>
    <string name="nav_header_subtitle">Join or create an event today!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

...
